--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,9 +3,14 @@
       "module": "commonjs", // 目标代码模块方式
       "outDir": "dist",
       "sourceMap": true,
-      "target": "es5" // 目标代码平台
+      "target": "es2017", // 目标代码平台
+      "emitDecoratorMetadata": true,
+      "experimentalDecorators": true,
+      "lib": [
+        "es2015"
+      ]
     },
     "files": [
-       "./src/index.ts"
+       "./src/app.ts",
     ]
 }
