--- a/package.json
+++ b/package.json
@@ -23,10 +23,19 @@
   "devDependencies": {
     "@types/express": "^4.16.0",
     "@types/koa": "^2.0.46",
+    "@types/koa-router": "^7.0.32",
+    "@types/node": "^10.10.2",
     "express": "^4.16.3",
     "koa": "^2.5.3",
+    "koa-router": "^7.4.0",
+    "reflect-metadata": "^0.1.12",
     "rimraf": "^2.6.2",
+    "sqlite3": "^4.0.2",
     "typedoc": "^0.12.0",
+    "typeorm": "^0.2.7",
     "typescript": "^3.0.3"
+  },
+  "dependencies": {
+    "ts-node": "^7.0.1"
   }
 }
